--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 <link href="https://fonts.googleapis.com/css?family=Montserrat:500,600,700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i&display=swap" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet" media="screen">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
   <div class="animsition">   
@@ -56,11 +57,11 @@
       </ul>
       <div class="menu-footer right-boxed">
         <div class="social-list">
-          <a href="" class="icon ion-social-twitter"></a>
-          <a href="" class="icon ion-social-facebook"></a>
-          <a href="" class="icon ion-social-googleplus"></a>
-          <a href="" class="icon ion-social-linkedin"></a>
-          <a href="" class="icon ion-social-dribbble-outline"></a>
+           <a href="https://www.facebook.com/profile.php?id=61551516386920" class="fa-brands fa-facebook"></a>
+           <a href="https://www.instagram.com/linda_j_here/" class="fa-brands fa-instagram"></a>
+           <a href="https://github.com/lindajgithub" class="fa-brands fa-github"></a>
+           <a href="https://www.linkedin.com/in/linda-johnson-in/" class="fa-brands fa-linkedin"></a>
+           <a href="https://dribbble.com/Lindajohnsonhere" class="fa-brands fa-dribbble"></a>
         </div>
         <div class="copy">© Linda 2024. All Rights Reseverd<br> Design by Linda</div>
       </div>
@@ -97,11 +98,11 @@
     </header>
     <div class="copy-bottom white boxed">© Linda 2024.</div>
     <div class="social-list social-list-bottom boxed">
-        <a href="" class="icon ion-social-twitter"></a>
-        <a href="" class="icon ion-social-facebook"></a>
-        <a href="" class="icon ion-social-googleplus"></a>
-        <a href="" class="icon ion-social-linkedin"></a>
-        <a href="" class="icon ion-social-dribbble-outline"></a>
+           <a href="https://www.facebook.com/profile.php?id=61551516386920" class="fa-brands fa-facebook"></a>
+           <a href="https://www.instagram.com/linda_j_here/" class="fa-brands fa-instagram"></a>
+           <a href="https://github.com/lindajgithub" class="fa-brands fa-github"></a>
+           <a href="https://www.linkedin.com/in/linda-johnson-in/" class="fa-brands fa-linkedin"></a>
+           <a href="https://dribbble.com/Lindajohnsonhere" class="fa-brands fa-dribbble"></a>
       </div>
     <div class="pagepiling">
       <div data-anchor="page1" class="pp-scrollable text-white section section-1">
