--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
            <a href="https://www.facebook.com/profile.php?id=61551516386920" class="fa-brands fa-facebook"></a>
            <a href="https://www.instagram.com/linda_j_here/" class="fa-brands fa-instagram"></a>
            <a href="https://github.com/lindajgithub" class="fa-brands fa-github"></a>
-           <a href="https://www.linkedin.com/in/linda-johnson-in/" class="fa-brands fa-linkedin"></a>
+           <a href="https://www.behance.net/lindajohnson79" class="fa-brands fa-square-behance"></a>
            <a href="https://dribbble.com/Lindajohnsonhere" class="fa-brands fa-dribbble"></a>
         </div>
         <div class="copy">© Linda Johnson 2024. All Rights Reseverd</div>
